crates/salvo-syntax/tests/snapshots/parser_tests__snapshot_std_string_kotlin.snap
---
source: crates/salvo-syntax/tests/parser_tests.rs
expression: "parse_clean(&std_core(\"string.kotlin.sv\"))"
---
Module {
    items: [
        DefineFn(
            DefineFn {
                sig: FnDecl {
                    backing: None,
                    name: Ident {
                        name: "size",
                        span: 10..14,
                    },
                    generics: [],
                    generic_with: [],
                    params: [
                        Param {
                            name: Ident {
                                name: "str",
                                span: 15..18,
                            },
                            ty: Named {
                                qualifiers: [],
                                base: TypeRef {
                                    name: Ident {
                                        name: "Str",
                                        span: 20..23,
                                    },
                                    args: [],
                                    span: 20..23,
                                },
                            },
                            variadic: false,
                            span: 15..23,
                        },
                    ],
                    effects: None,
                    deductions: None,
                    return_type: Some(
                        Named {
                            qualifiers: [],
                            base: TypeRef {
                                name: Ident {
                                    name: "Int",
                                    span: 28..31,
                                },
                                args: [],
                                span: 28..31,
                            },
                        },
                    ),
                    constructs: None,
                    body: None,
                    span: 7..31,
                },
                body: DefineBody {
                    imports: None,
                    inline: Some(
                        Template {
                            parts: [
                                Interp(
                                    Ident {
                                        name: "str",
                                        span: 46..73,
                                    },
                                ),
                                Text(
                                    ".length",
                                ),
                            ],
                            span: 46..73,
                        },
                    ),
                    mut_inline: None,
                },
                span: 0..75,
            },
        ),
        DefineFn(
            DefineFn {
                sig: FnDecl {
                    backing: None,
                    name: Ident {
                        name: "char_at",
                        span: 87..94,
                    },
                    generics: [],
                    generic_with: [],
                    params: [
                        Param {
                            name: Ident {
                                name: "str",
                                span: 95..98,
                            },
                            ty: Named {
                                qualifiers: [],
                                base: TypeRef {
                                    name: Ident {
                                        name: "Str",
                                        span: 100..103,
                                    },
                                    args: [],
                                    span: 100..103,
                                },
                            },
                            variadic: false,
                            span: 95..103,
                        },
                        Param {
                            name: Ident {
                                name: "index",
                                span: 105..110,
                            },
                            ty: Named {
                                qualifiers: [
                                    TypeRef {
                                        name: Ident {
                                            name: "Positive",
                                            span: 112..120,
                                        },
                                        args: [],
                                        span: 112..120,
                                    },
                                ],
                                base: TypeRef {
                                    name: Ident {
                                        name: "Int",
                                        span: 121..124,
                                    },
                                    args: [],
                                    span: 121..124,
                                },
                            },
                            variadic: false,
                            span: 105..124,
                        },
                    ],
                    effects: None,
                    deductions: None,
                    return_type: Some(
                        Nullable {
                            inner: Named {
                                qualifiers: [],
                                base: TypeRef {
                                    name: Ident {
                                        name: "Char",
                                        span: 129..133,
                                    },
                                    args: [],
                                    span: 129..133,
                                },
                            },
                            span: 129..134,
                        },
                    ),
                    constructs: None,
                    body: None,
                    span: 84..134,
                },
                body: DefineBody {
                    imports: None,
                    inline: Some(
                        Template {
                            parts: [
                                Interp(
                                    Ident {
                                        name: "str",
                                        span: 149..189,
                                    },
                                ),
                                Text(
                                    ".getOrNull(",
                                ),
                                Interp(
                                    Ident {
                                        name: "index",
                                        span: 149..189,
                                    },
                                ),
                                Text(
                                    ")",
                                ),
                            ],
                            span: 149..189,
                        },
                    ),
                    mut_inline: None,
                },
                span: 77..191,
            },
        ),
    ],
}
